add the index link

--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <a href="index.html">Click me go to index</a>
+    <h1>Sorawee Sriphakdeephongdej</h1>
+
 </body>
 </html>
