--- a/profile.html
+++ b/profile.html
@@ -10,5 +10,8 @@
     
     <h1>Sorawee Sriphakdeephongdej</h1>
 
+    <h2>Education : Chiangmai University</h2>
+    <h2>Hobby : Sleep</h2>
+
 </body>
 </html>
