add to be continued

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     
-    <a href="index.html">Click me go to index</a>
+    <a href="profile.html">Click me go to profile</a>
+
+    <h1>To Be Continued</h1>
 </body>
 </html>
