--- a/profile.html
+++ b/profile.html
@@ -13,5 +13,8 @@
     <h2>Education : Chiangmai University</h2>
     <h2>Hobby : Sleep</h2>
 
+    <a href="index.html">Click me go to index</a>
+
+
 </body>
 </html>
